[package]
name = "influx_db_client"
version = "0.3.6"
authors = ["piaoliu <441594700@qq.com>"]
documentation = "https://docs.rs/influx_db_client/"
repository = "https://github.com/driftluo/InfluxDBClient-rs"
description = "InfluxDB Rust driver"
readme = "README.md"
keywords = ["influxdb"]
categories = ["database"]
license = "MIT"
include = ["Cargo.toml", "src/*.rs", "README.md", "LICENSE"]

[badges]
travis-ci = { repository = "driftluo/InfluxDBClient-rs" }

[dependencies]
reqwest = "~0.9"
serde_json = '^1.0.2'
serde_derive = "^1.0.15"
serde = "^1.0.15"
url = "1.7"

[dev-dependencies]
native-tls = "^0.2.1"
tempdir = "0.3"
